# routes/order_list.js
@@ -8,19 +8,19 @@ module.exports = (app) => {
 
     // WE NEED 1 GET AND 1 POST AND A DELETE TO DELETE BASED ON THE DATE SO MULTIPLE COLUMNS WILL GET DELETED!
 
-    orderListRouter.get('/', async (req, res) => {
+    orderListRouter.get('/', async (req, res, next) => {
         try {
             const orderList = await OLServiceInstance.wholeList('order_list');
             res.status(200).send(orderList);
         } catch(err) {
-            res.status(404).send(err)
+            next(err);
         }
     });
 
-    orderListRouter.post('/', async (req, res) => {
+    orderListRouter.post('/', async (req, res, next) => {
         try {
-
-            const arrayObject = [
+            console.log(req.body) // We have the array of object looks exactly like below!!
+            /*const arrayObject = [
                 {// might need a 4 key for price from the ui client
                     customers_cid: 3,
                     store_products_spid: 6,
@@ -36,25 +36,24 @@ module.exports = (app) => {
                     store_products_spid: 4,
                     quantity: 2
                 }
-            ]
-
-            const orderList = await OLServiceInstance.generateNewList(arrayObject, 'order_list');
-            res.status(200).send(orderList);
+            ]*/
+            const orderList = await OLServiceInstance.generateNewList(req.body, 'order_list');
+            res.status(201).send(orderList);
         } catch(err) {
-            res.status(404).send(err)
+            next(err);
         }
     });
 
-    orderListRouter.delete('/:date', async (req, res) => {
+    orderListRouter.delete('/:date', async (req, res, next) => {
       try {
         await OLServiceInstance.deleteList(req.params.date, 'order_list', 'order_date');
         res.sendStatus(204)
       } catch(err) {
-          res.status(404).send(err);
+          next(err);
       }
     });
 
-    orderListRouter.get('/:customerId/:date', async (req, res) => {
+    orderListRouter.get('/:customerId/:date', async (req, res, next) => {
       try {
         const objHolder = {
           id: Number(req.params.customerId),
@@ -64,7 +63,7 @@ module.exports = (app) => {
         const result = await OLServiceInstance.getCustomerDate(objHolder, 'order_list', 'customers_cid', 'order_date');
         res.status(200).send(result);
       } catch(err) {
-          res.status(404).send(err);
+          next(err);
       }
     });
 
